po: update po/pt_BR/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/event.po
+++ b/po/pt_BR/event.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-22 05:29+0000\n"
+"PO-Revision-Date: 2016-11-29 07:52+0000\n"
 "Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -228,7 +228,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Map Enabled"
-msgstr ""
+msgstr "Mapa Habilitado"
 
 #: CRM/Event/DAO/Event.php
 msgid "show location"
@@ -236,7 +236,7 @@ msgstr "Mostrar localização"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr ""
+msgstr "ID de Perfil Padrão"
 
 #: CRM/Event/DAO/Event.php
 msgid "Confirmation Title"
@@ -272,11 +272,11 @@ msgstr "Confirmar em Cópia Oculta"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Fee ID"
-msgstr ""
+msgstr "ID do Valor Padrão"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Discount Fee ID"
-msgstr ""
+msgstr "ID do Valor do Desconto Padrão"
 
 #: CRM/Event/DAO/Event.php
 msgid "ThankYou Title"
@@ -288,23 +288,23 @@ msgstr "Texto de ThankYou"
 
 #: CRM/Event/DAO/Event.php
 msgid "Pay Later Allowed"
-msgstr ""
+msgstr "Permite pagamento posterior"
 
 #: CRM/Event/DAO/Event.php
 msgid "Pay Later Receipt Text"
-msgstr ""
+msgstr "Texto do Recibo de Pagamento Posterior"
 
 #: CRM/Event/DAO/Event.php
 msgid "Partial Payments Enabled"
-msgstr ""
+msgstr "Pagamentos Parciais Habilitados"
 
 #: CRM/Event/DAO/Event.php
 msgid "Minimum Initial Amount"
-msgstr ""
+msgstr "Valor Inicial Mínimo"
 
 #: CRM/Event/DAO/Event.php
 msgid "Allow Multiple Registrations"
-msgstr ""
+msgstr "Permitir Registros Múltiplos"
 
 #: CRM/Event/DAO/Event.php
 msgid "Does Event allow multiple registrations from same email address?"
@@ -312,7 +312,7 @@ msgstr "O evento permitirá inscrições múltiplas de um mesmo e-mail ?"
 
 #: CRM/Event/DAO/Event.php
 msgid "Waitlist Enabled"
-msgstr ""
+msgstr "Lista de Espera Habilitada"
 
 #: CRM/Event/DAO/Event.php
 msgid "Requires Approval"
@@ -332,7 +332,7 @@ msgstr "Texto de Req Aprovação "
 
 #: CRM/Event/DAO/Event.php
 msgid "Is an Event Template"
-msgstr ""
+msgstr "É um Modelo de Eventos"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Template Title"
@@ -340,7 +340,7 @@ msgstr "Título do Modelo de Evento"
 
 #: CRM/Event/DAO/Event.php
 msgid "Created By Contact ID"
-msgstr ""
+msgstr "Criado pelo ID de Contato"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Created Date"
@@ -348,11 +348,11 @@ msgstr "Data de criação do Evento"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is the booking confirmation screen enabled?"
-msgstr ""
+msgstr "Tela de confirmação de reserva habilitada?"
 
 #: CRM/Event/DAO/Event.php
 msgid "Parent Event ID"
-msgstr ""
+msgstr "ID do Evento Pai"
 
 #: CRM/Event/DAO/Event.php
 msgid "Subevent Slot Label ID"
@@ -360,11 +360,11 @@ msgstr "ID de Rótulo de Vaga de Subevento"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Status ID"
-msgstr ""
+msgstr "ID de Situação do Participante"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Role ID"
-msgstr ""
+msgstr "ID do Perfil do Participante"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Register date"
@@ -384,39 +384,39 @@ msgstr "Valor do desconto"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Event Cart ID"
-msgstr ""
+msgstr "ID do Carrinho do Evento"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Must Wait on List"
-msgstr ""
+msgstr "Deve Aguardar na Lista"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Type ID"
-msgstr ""
+msgstr "ID de Tipo de Situação do Participante"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Label"
-msgstr ""
+msgstr "Rótulo de Situação do Participante"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Class"
-msgstr ""
+msgstr "Classe de Situação do Participante"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Is Reserved?>"
-msgstr ""
+msgstr "Situação de Participante Reservada?>"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status is Active"
-msgstr ""
+msgstr "Situação de Participante Ativa"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Counts?"
-msgstr ""
+msgstr "Situação de Participante Contabilizada?"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Visibility"
-msgstr ""
+msgstr "Visibilidade de Situação do Participante"
 
 #: CRM/Event/Form/EventFees.php templates/CRM/Event/Form/EventFees.tpl
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
@@ -497,7 +497,7 @@ msgstr "Descrição Completa"
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "Include Map to Event Location"
-msgstr ""
+msgstr "Incluir Mapa de Localização do Evento"
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "End Date / Time"
@@ -892,7 +892,7 @@ msgstr "Registro Offline para Evento: %2 por: %1"
 
 #: CRM/Event/Form/Participant.php
 msgid "%1 : Offline registration (by %2)"
-msgstr ""
+msgstr "%1 : Inscrição Offline (por %2)"
 
 #: CRM/Event/Form/Participant.php
 msgid "Event registration information for %1 has been updated."
@@ -926,7 +926,7 @@ msgstr "Um email de confirmação foi enviado para todos os participantes."
 
 #: CRM/Event/Form/ParticipantFeeSelection.php
 msgid "Change selections for %1"
-msgstr ""
+msgstr "Alterar Seleções para %1"
 
 #: CRM/Event/Form/ParticipantFeeSelection.php
 msgid "Save and Record Payment"
@@ -1032,7 +1032,7 @@ msgstr "Por favor, volte à página principal de registro para completar a infor
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid "Skip Participant"
-msgstr ""
+msgstr "Pular Participante"
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid "A person is already registered for this event."
@@ -1121,7 +1121,7 @@ msgstr ""
 
 #: CRM/Event/Form/Registration/Confirm.php
 msgid "Sold out:"
-msgstr ""
+msgstr "Esgotado:"
 
 #: CRM/Event/Form/Registration/Confirm.php
 msgid " (multiple participants)"
@@ -1267,7 +1267,7 @@ msgstr "A taxa(s) do evento não pode ser inferior a zero. Por favor, selecione 
 
 #: CRM/Event/Form/Registration/Register.php
 msgid "Please select a Payment Method"
-msgstr ""
+msgstr "Favor selecionar um Método de Pagamento"
 
 #: CRM/Event/Form/Registration/Register.php
 msgid ""
@@ -1422,7 +1422,7 @@ msgstr "Em entradas duplicadas"
 
 #: CRM/Event/Import/Form/MapField.php
 msgid "Missing required field: Provide Participant ID"
-msgstr ""
+msgstr "Campo obrigatório ausente: Forneça o ID do Participante"
 
 #: CRM/Event/Import/Form/MapField.php
 msgid "Or Provide Contact ID or External ID."
@@ -1450,67 +1450,67 @@ msgstr "CiviCRM Event Engine"
 
 #: CRM/Event/Info.php
 msgid "access CiviEvent"
-msgstr ""
+msgstr "acessar CiviEvent"
 
 #: CRM/Event/Info.php
 msgid ""
 "Create events, view all events, and view participant records (for visible "
 "contacts)"
-msgstr ""
+msgstr "Criar eventos, ver todos os eventos e registros de participantes (para contatos visíveis)"
 
 #: CRM/Event/Info.php
 msgid "edit event participants"
-msgstr ""
+msgstr "editar participantes de evento"
 
 #: CRM/Event/Info.php
 msgid "Record and update backend event registrations"
-msgstr ""
+msgstr "Registrar e atualizar inscrições de eventos na área administrativa"
 
 #: CRM/Event/Info.php
 msgid "edit all events"
-msgstr ""
+msgstr "editar todos os eventos"
 
 #: CRM/Event/Info.php
 msgid "Edit events even without specific ACL granted"
-msgstr ""
+msgstr "Editar eventos sem permissão de ACL específica"
 
 #: CRM/Event/Info.php
 msgid "register for events"
-msgstr ""
+msgstr "inscrever em eventos"
 
 #: CRM/Event/Info.php
 msgid "Register for events online"
-msgstr ""
+msgstr "Inscrever em eventos online"
 
 #: CRM/Event/Info.php
 msgid "view event info"
-msgstr ""
+msgstr "ver informação de evento"
 
 #: CRM/Event/Info.php
 msgid "View online event information pages"
-msgstr ""
+msgstr "Ver páginas de informação de evento online"
 
 #: CRM/Event/Info.php
 msgid "view event participants"
-msgstr ""
+msgstr "ver participantes de evento"
 
 #: CRM/Event/Info.php
 msgid "delete in CiviEvent"
-msgstr ""
+msgstr "excluir no CiviEvent"
 
 #: CRM/Event/Info.php
 msgid "Delete participants and events that you can edit"
-msgstr ""
+msgstr "Excluir participantes e eventos que você possa editar"
 
 #: CRM/Event/Info.php
 msgid "manage event profiles"
-msgstr ""
+msgstr "gerenciar perfis de eventos"
 
 #: CRM/Event/Info.php
 msgid ""
 "Allow users to create, edit and copy event-related profile forms used for "
 "online event registration."
-msgstr ""
+msgstr "Permite criar, editar e copiar formulários de perfis usados para inscrição online em eventos."
 
 #: CRM/Event/Info.php
 msgid "Your Event(s)"
@@ -1803,31 +1803,31 @@ msgstr "A situação de pagamento para este participante está concluída.  A si
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "How should this change affect others in the series?"
-msgstr ""
+msgstr "Como deve isto afetar outros eventos da série?"
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "Only this %1"
-msgstr ""
+msgstr "Apenas este %1"
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "All others in the series will remain unchanged."
-msgstr ""
+msgstr "Todos os outros eventos continuam inalterados."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "This %1 onwards"
-msgstr ""
+msgstr "Deste %1 para adiante"
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "Change applies to this %1 and all that come after it."
-msgstr ""
+msgstr "Mudança aplica-se a este %1 e todos que vierem depois."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "Every %1"
-msgstr ""
+msgstr "Todos %1"
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "Change applies to every %1 in the series."
-msgstr ""
+msgstr "Mudança aplica-se a todos %1 da série."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid ""
@@ -2459,7 +2459,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 msgid "Event Link"
-msgstr ""
+msgstr "Link do Evento"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl
@@ -2846,7 +2846,7 @@ msgstr "Um email de confirmação do registro foi também enviado por email a %1
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid "Tax Total"
-msgstr ""
+msgstr "Total de Taxas"
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid "Additional Participant Email(s)"
@@ -3259,11 +3259,11 @@ msgstr "Receba iCalendar feed para os eventos públicos correntes e futuros."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Repeating Event"
-msgstr ""
+msgstr "Evento com Repetição"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Child"
-msgstr ""
+msgstr "Filho"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "List %1 participants"
@@ -3580,11 +3580,11 @@ msgstr "Você foi registrado por:"
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Participant Total"
-msgstr ""
+msgstr "Total de Participantes"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid " Amount Before Tax: "
-msgstr ""
+msgstr "Valor Antes das Taxas:"
 
 #: xml/templates/message_templates/event_online_receipt_subject.tpl
 msgid "Wait List Confirmation"
@@ -3632,7 +3632,7 @@ msgstr "O registro no evento expirou para %1"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is %1"
-msgstr ""
+msgstr "Participante é %1"
 
 #: CRM/Event/BAO/Query.php
 msgid ""
@@ -3647,27 +3647,27 @@ msgstr ""
 
 #: CRM/Event/Cart/DAO/Cart.php
 msgid "Cart ID"
-msgstr ""
+msgstr "ID do Carrinho"
 
 #: CRM/Event/Cart/DAO/Cart.php
 msgid "Complete?"
-msgstr ""
+msgstr "Completado?"
 
 #: CRM/Event/Cart/DAO/EventInCart.php
 msgid "Event In Cart"
-msgstr ""
+msgstr "Evento no Carrinho"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role"
-msgstr ""
+msgstr "Perfil Padrão"
 
 #: CRM/Event/DAO/Event.php
 msgid "Maximum number of additional participants per registration"
-msgstr ""
+msgstr "Número máximo de participantes adicionais por inscrição"
 
 #: CRM/Event/DAO/Event.php
 msgid "Allow Self-service Cancellation or Transfer"
-msgstr ""
+msgstr "Permitir Transferência ou Cancelamento pelo Participante"
 
 #: CRM/Event/DAO/Event.php
 msgid "Self-service Cancellation or Transfer Time"
@@ -3675,7 +3675,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Participant.php
 msgid "Transferred to Contact ID"
-msgstr ""
+msgstr "Transferido para ID de Contato"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Maximum additional participants"
