--- a/po/pt_BR/provinces.po
+++ b/po/pt_BR/provinces.po
@@ -5,7 +5,7 @@
 # Translators:
 # Carlos Sousa <carlossoaresdesousa@gmail.com>, 2012
 # Nana, 2012
-# Diego Viegas <diego.viegas@dotpro.com.br>, 2012,2014
+# Diego Viegas <diego.viegas@dotpro.com.br>, 2012,2014,2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2012
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-29 06:50+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1888,7 +1888,7 @@ msgstr "Burgas"
 
 msgctxt "province"
 msgid "Dobrich"
-msgstr ""
+msgstr "Dobrich"
 
 msgctxt "province"
 msgid "Gabrovo"
