po: update po/pt_BR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/common-base.po
+++ b/po/pt_BR/common-base.po
@@ -32,7 +32,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-30 05:31+0000\n"
+"PO-Revision-Date: 2016-11-30 05:54+0000\n"
 "Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -11250,7 +11250,7 @@ msgstr "Quantia dedutível"
 #: CRM/Price/DAO/LineItem.php templates/CRM/Price/Page/Field.tpl
 #: templates/CRM/Price/Page/LineItem.tpl templates/CRM/Price/Page/Option.tpl
 msgid "Tax Amount"
-msgstr "Valor da Taxa"
+msgstr "Valor do Imposto"
 
 #: CRM/Price/DAO/PriceField.php
 msgid "Price Field ID"
@@ -19070,7 +19070,7 @@ msgstr "Visualizar (todos os campos)"
 
 #: templates/CRM/Price/Page/Field.tpl templates/CRM/Price/Page/Option.tpl
 msgid "Tax Label"
-msgstr "Rótulo da Taxa"
+msgstr "Rótulo do Imposto"
 
 #: templates/CRM/Price/Page/Field.tpl
 msgid "View Price Options"
@@ -19086,11 +19086,11 @@ msgstr "Subtotal"
 
 #: templates/CRM/Price/Page/LineItem.tpl
 msgid "Tax Rate"
-msgstr "Razão da Taxa"
+msgstr "Taxa do Imposto"
 
 #: templates/CRM/Price/Page/LineItem.tpl
 msgid "Total Tax Amount"
-msgstr "Valor Total da Taxa"
+msgstr "Valor Total do Imposto"
 
 #: templates/CRM/Price/Page/Option.tpl
 msgid ""
@@ -20726,7 +20726,7 @@ msgstr "Doação"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Member Dues"
-msgstr "Mensalidades/Taxas de Filiação"
+msgstr "Obrigações de Filiação"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Campaign Contribution"
@@ -22437,7 +22437,7 @@ msgstr "A Conta de Descontos é"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Sales Tax Account is"
-msgstr "Conta da Taxa de Venda é"
+msgstr "Conta do Imposto de Venda é"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Morning Sessions"
@@ -25426,7 +25426,7 @@ msgstr ""
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Cache Key"
-msgstr ""
+msgstr "Chave do Cache"
 
 #: CRM/Core/DAO/PrevNextCache.php
 msgid "Prev Next Data"
@@ -25442,23 +25442,23 @@ msgstr "ID do Estado"
 
 #: CRM/Core/DAO/StatusPreference.php
 msgid "Status Preference ID"
-msgstr ""
+msgstr "ID de Preferência da Situação"
 
 #: CRM/Core/DAO/StatusPreference.php
 msgid "Status Check Name"
-msgstr ""
+msgstr "Nome de Verificação da Situação"
 
 #: CRM/Core/DAO/StatusPreference.php
 msgid "Snooze Status Notifications Until"
-msgstr ""
+msgstr "Silenciar Notificações de Situação Até"
 
 #: CRM/Core/DAO/StatusPreference.php
 msgid "Ignore Severity"
-msgstr ""
+msgstr "Ignorar Severidade"
 
 #: CRM/Core/DAO/StatusPreference.php
 msgid "Status Preferences"
-msgstr ""
+msgstr "Preferências de Situação"
 
 #: CRM/Core/DAO/StatusPreference.php
 msgid "Check Info"
@@ -25466,11 +25466,11 @@ msgstr "Verificar Informação"
 
 #: CRM/Core/DAO/Timezone.php
 msgid "Timezone ID"
-msgstr ""
+msgstr "ID da Zona de Tempo"
 
 #: CRM/Core/DAO/Timezone.php
 msgid "Timezone Name"
-msgstr ""
+msgstr "Nome da Zona de Temp"
 
 #: CRM/Core/DAO/Timezone.php
 msgid "Timezone Abbreviation"
@@ -25577,11 +25577,11 @@ msgstr ""
 
 #: CRM/Core/Payment.php
 msgid "Online Event Registration: "
-msgstr ""
+msgstr "Registro de Evento Online:"
 
 #: CRM/Core/Payment.php
 msgid "Online Contribution: "
-msgstr ""
+msgstr "Contribuição Online:"
 
 #: CRM/Core/Permission.php
 msgid "import SQL datasource"
@@ -25629,11 +25629,11 @@ msgstr "Até o Final dos Prévio"
 
 #: CRM/Core/SelectValues.php
 msgid "From End of Previous"
-msgstr ""
+msgstr "Do Final da Anterior"
 
 #: CRM/Core/SelectValues.php
 msgid "From Start Of Current"
-msgstr ""
+msgstr "Do Início da Atual"
 
 #: CRM/Core/SelectValues.php
 msgid "Last 3"
@@ -25649,7 +25649,7 @@ msgstr "Este"
 
 #: CRM/Core/SelectValues.php
 msgid "To End of"
-msgstr ""
+msgstr "Até o Final de"
 
 #: CRM/Core/SelectValues.php
 msgid "Years"
@@ -25697,35 +25697,35 @@ msgstr "Blog"
 
 #: CRM/Dedupe/DAO/Exception.php
 msgid "Dedupe Exception ID"
-msgstr ""
+msgstr "ID de Exceção de Deduplicação"
 
 #: CRM/Dedupe/DAO/Rule.php
 msgid "Dedupe Rule ID"
-msgstr ""
+msgstr "ID da Regra de Deduplicação"
 
 #: CRM/Dedupe/DAO/Rule.php
 msgid "Dedupe Rule Group"
-msgstr ""
+msgstr "Grupo de Regra de Deduplicação"
 
 #: CRM/Dedupe/DAO/RuleGroup.php
 msgid "Rule Group ID"
-msgstr ""
+msgstr "ID do Grupo de Regra"
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact(s) were merged."
-msgstr ""
+msgstr "Contato(s) mesclado(s)."
 
 #: CRM/Dedupe/Merger.php
 msgid " Contact(s) were skipped."
-msgstr ""
+msgstr "Contato(s) não mesclado(s)."
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact ID %1 has been merged into Contact ID %2 and deleted."
-msgstr ""
+msgstr "ID de Contato %1 foi mesclado no ID de Contato %2 e excluído."
 
 #: CRM/Dedupe/Merger.php
 msgid "Cannot merge because the '%1' contact (ID %2) has been deleted."
-msgstr ""
+msgstr "Impossível mesclar pois o contato '%1' (ID %2) foi excluído."
 
 #: CRM/Export/Form/Select.php
 msgid "Export Options"
@@ -25748,19 +25748,19 @@ msgid ""
 "Count data for smart groups is not currently calculated. You may click "
 "Update Smart Groups to generate it. Be aware this can cause significant "
 "server load"
-msgstr ""
+msgstr "Os dados de contagem dos grupos inteligentes não estão calculados. Você pode clicar em Atualizar Grupos Inteligente para gerá-los. Considere que isso acarretará em carga significativa no servidor."
 
 #: CRM/Logging/ReportDetail.php
 msgid "Are you sure you want to revert all changes?"
-msgstr ""
+msgstr "Tem certeza que deseja reverter todas as mudanças?"
 
 #: CRM/Price/DAO/PriceSetEntity.php
 msgid "Price Set Entity ID"
-msgstr ""
+msgstr "ID de Entidade do Conjunto de Preços"
 
 #: CRM/Price/DAO/PriceSetEntity.php
 msgid "Entity IF"
-msgstr ""
+msgstr "IF da Entidade"
 
 #: CRM/Price/Form/Option.php
 msgid "You do not have permission to access this page"
@@ -25768,17 +25768,17 @@ msgstr "Você não tem permissão para acessar esta página"
 
 #: CRM/Price/Form/Option.php
 msgid "Pre Option Help"
-msgstr ""
+msgstr "Ajuda Anterior da Opção"
 
 #: CRM/Price/Form/Option.php
 msgid "Post Option Help"
-msgstr ""
+msgstr "Ajuda Posterior da Opção"
 
 #: CRM/Profile/Form/Edit.php
 msgid ""
 "No user/contact ID was specified, so the Profile cannot be used in edit "
 "mode."
-msgstr ""
+msgstr "Nenhum ID de usuário/contato foi especificado, então o Perfil não pode ser usado em modo edição."
 
 #: CRM/UF/Page/Group.php
 msgid "Use - Create Mode"
@@ -25790,7 +25790,7 @@ msgstr "Usar - Modo de Edição"
 
 #: CRM/UF/Page/Group.php
 msgid "Use - Listings Mode"
-msgstr ""
+msgstr "Usar - Modo de Listagem"
 
 #: CRM/Utils/Check/Component/Case.php
 msgid "Case type \"%1\" has duplicate XML files (\"%2\" and \"%3\")"
@@ -25798,7 +25798,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Case.php
 msgid "Read more about this warning"
-msgstr ""
+msgstr "Leia mais sobre este aviso"
 
 #: CRM/Utils/Check/Component/Case.php
 msgid ""
@@ -25889,7 +25889,7 @@ msgstr "Configurar Caixa de Entrada Padrão"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "A default mailbox must be configured for email bounce processing."
-msgstr ""
+msgstr "Um caixa de correio padrão deve ser configurada para processamento de retornos."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Learn more in the <a %1>online documentation</a>."
@@ -26035,11 +26035,11 @@ msgstr "Extensão %1 (%2) está instalada, mas seus arquivos estão faltando."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "%1 (%2) version %3 is installed. <a %4>Upgrade to version %5</a>."
-msgstr ""
+msgstr "%1 (%2) versão %3 está instalada. <a %4>Atualize para versão %5</a>."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "%1 (%2) version %3"
-msgstr ""
+msgstr "%1 (%2) versão %3"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "No extensions installed. <a %1>Browse available extensions</a>."
@@ -26146,7 +26146,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "Option Values with problematic Values"
-msgstr ""
+msgstr "Valores de Opção com Valores problemáticos"
 
 #: CRM/Utils/Check/Component/Security.php
 msgid "Private Files Readable"
@@ -26312,7 +26312,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "Show/hide rows with the same data on each contact record."
-msgstr ""
+msgstr "Exibir/ocultar linhas com a mesma informação em cada registro de contato."
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "overwrite"
@@ -26350,11 +26350,11 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Search/AdvancedCriteria.tpl
 msgid "Display Settings For Results"
-msgstr ""
+msgstr "Configuração de Exibição Para Resultados"
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.hlp
 msgid "Select a pre-existing template, or upload a document for mail merge."
-msgstr ""
+msgstr "Selecione um modelo pré-existente, ou carregue um documento para mesclagem da carta."
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.hlp
 msgid "Supported file formats: %1"
@@ -26464,7 +26464,7 @@ msgstr "Inverter Duplicatas Selecionadas"
 
 #: templates/CRM/Core/Form/ShortCode.tpl
 msgid "Can't find your form? Make sure it is active."
-msgstr ""
+msgstr "Não encontra seu formulário? Confira que ele está ativo."
 
 #: templates/CRM/Custom/Form/Group.tpl
 msgid ""
@@ -26544,15 +26544,15 @@ msgstr ""
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Showing %1 to %2 of %3 entries"
-msgstr ""
+msgstr "Exibindo de %1 a %2 de %3 registros"
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "(filtered from %1 total entries)"
-msgstr ""
+msgstr "(filtrado do total de %1 registros)"
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Show %1 entries"
-msgstr ""
+msgstr "Exibindo %1 registros"
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "%1 not found."
@@ -26656,11 +26656,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Details"
-msgstr "Detalhes de Receita Diferida"
+msgstr "Detalhes de Receita Deferida"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Details Report"
-msgstr "Relatório de Detalhes de Receita Diferida"
+msgstr "Relatório de Detalhes de Receita Deferida"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Textarea"
@@ -26676,7 +26676,7 @@ msgstr "Conta de Estorno é"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Account is"
-msgstr "Conta de Renda Diferida é"
+msgstr "Conta de Renda Deferida é"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This week"
@@ -26884,39 +26884,39 @@ msgstr "Anteontem"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Week prior to previous week"
-msgstr "Semana anterior à passada"
+msgstr "Antepenúltima semana"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Month prior to previous calendar month"
-msgstr "Mês anterior ao mês calendário anterior"
+msgstr "Antepenúltimo mês calendário"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Quarter prior to previous quarter"
-msgstr ""
+msgstr "Antepenúltimo trimestre"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Year prior to previous calendar year"
-msgstr ""
+msgstr "Antepenúltimo ano calendário"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous week"
-msgstr ""
+msgstr "Do final da semana anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar month"
-msgstr ""
+msgstr "Do final do mês calendário anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous quarter"
-msgstr ""
+msgstr "Do final do trimestre anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "From end of previous calendar year"
-msgstr ""
+msgstr "Do final do ano calendário anterior"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue - Event Fee"
-msgstr ""
+msgstr "Renda Deferida - Taxas de Eventos"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue - Member Dues"
