--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-17 08:27+0000\n"
+"PO-Revision-Date: 2016-11-30 12:26+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2187,7 +2187,7 @@ msgstr ""
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Links"
-msgstr ""
+msgstr "Enllaços"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Search Contribution"
