po: update po/pt_BR/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/report.po
+++ b/po/pt_BR/report.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-22 05:31+0000\n"
+"PO-Revision-Date: 2016-11-30 06:17+0000\n"
 "Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -86,19 +86,19 @@ msgstr ""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Header"
-msgstr ""
+msgstr "Cabeçalho da Instância do Relatório"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Footer"
-msgstr ""
+msgstr "Rodapé da Instância do Relatório"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Drilldown Report ID"
-msgstr ""
+msgstr "ID do Relatório Drilldown"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Instance is Reserved"
-msgstr ""
+msgstr "A Instância é Reservada"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Contact Name"
@@ -130,7 +130,7 @@ msgstr "Email do Contato Alvo"
 
 #: CRM/Report/Form/Activity.php
 msgid "Include Case Activities"
-msgstr ""
+msgstr "Incluir Atividades de Processo"
 
 #: CRM/Report/Form/Activity.php
 msgid "Current filter criteria didn't have any target contact to add to group"
@@ -393,7 +393,7 @@ msgstr "Apagar (para lixeira)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact A Full Name"
-msgstr ""
+msgstr "Nome Completo do Contato A"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Type (Contact A)"
@@ -401,11 +401,11 @@ msgstr "Tipo do Contato (Contato A)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Subtype (Contact A)"
-msgstr ""
+msgstr "Subtipo de Contato (Contato  A)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact B Full Name"
-msgstr ""
+msgstr "Nome Completo do Contato B"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Type (Contact B)"
@@ -413,7 +413,7 @@ msgstr "Tipo de Contato (Contato  B)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Subtype (Contact B)"
-msgstr ""
+msgstr "Subtipo de Contato (Contato  B)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Email (Contact A)"
@@ -457,7 +457,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Not expired"
-msgstr ""
+msgstr "Não Vencido"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Edit this relationship."
@@ -537,13 +537,13 @@ msgstr "Contribuição Ordinária"
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Total Amount (Contributions)"
-msgstr ""
+msgstr "Valor Total (Contribuições)"
 
 #: CRM/Report/Form/Contribute/Detail.php
 #: CRM/Report/Form/Contribute/SoftCredit.php
 #: CRM/Report/Form/Contribute/Summary.php CRM/Report/Form/Member/Summary.php
 msgid "Total Contributions"
-msgstr ""
+msgstr "Contribuições Totais"
 
 #: CRM/Report/Form/Contribute/Detail.php
 #: CRM/Report/Form/Contribute/SoftCredit.php
@@ -667,7 +667,7 @@ msgstr "Tipo de Contato do Apoiador"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Supporter Contact Subtype"
-msgstr ""
+msgstr "Subtipo de Contato de Suporte"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Supporter Name"
@@ -691,7 +691,7 @@ msgstr "Número de doadores"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Most Recent Contribution"
-msgstr ""
+msgstr "Contribuições Mais Recentes"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Goal Total"
@@ -711,19 +711,19 @@ msgstr "Doadores Totais"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Last name, First name"
-msgstr ""
+msgstr "Sobrenome, Primeiro Nome"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Amount Contributed to Date"
-msgstr ""
+msgstr "Valor Contribuído até a Data"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Total Amount Contributed"
-msgstr ""
+msgstr "Valor Total Contribuído"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Frequency interval"
-msgstr ""
+msgstr "Intervalo de Frequência"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Frequency unit"
