--- a/po/pt_BR/financial.po
+++ b/po/pt_BR/financial.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Cristiane Lima <tiane.ash@uol.com.br>, 2016
+# Débora Maia <debora@dotpro.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013-2014
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2013
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-01 11:57+0000\n"
+"Last-Translator: Débora Maia <debora@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -289,15 +290,15 @@ msgstr "Tipo do Processador é Padrão?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for User Name if used"
-msgstr ""
+msgstr "Rótulo para Nome de Usuário, se usado"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for password"
-msgstr ""
+msgstr "Rótulo para senha"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Signature"
-msgstr ""
+msgstr "Rótulo para Assinatura"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Subject"
