--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -31,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-30 06:13+0000\n"
-"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
+"PO-Revision-Date: 2016-12-01 11:46+0000\n"
+"Last-Translator: Débora Maia <debora@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6886,7 +6886,7 @@ msgstr "Plugins"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Select optional extra features"
-msgstr ""
+msgstr "Selecione recursos extras opcionais"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
