po: update po/ca_ES/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/mailing.po
+++ b/po/ca_ES/mailing.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-18 08:23+0000\n"
+"PO-Revision-Date: 2016-12-01 10:38+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1324,7 +1324,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "This mailing has been submitted."
-msgstr ""
+msgstr "S'ha enviat aquest mailing."
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
@@ -1408,7 +1408,7 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "~%1 recipients"
-msgstr ""
+msgstr "~%1 destinataris"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/services.js
 msgid "Previewing..."
