--- a/po/fr_CA/case.po
+++ b/po/fr_CA/case.po
@@ -5,19 +5,19 @@
 # Translators:
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
-# Mathieu Lutfy <mathieu@bidon.ca>, 2015-2016
+# Mathieu Lu <mathieu@bidon.ca>, 2015-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Rick Paré <rick.pare69@gmail.com>, 2016
+# Rick Paré, 2016
 # samuelsov <samuel@koumbit.org>, 2016
 # samuelsov <samuel@koumbit.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 19:59+0000\n"
-"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
+"PO-Revision-Date: 2016-12-02 21:02+0000\n"
+"Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -362,7 +362,7 @@ msgstr "Vérificaiton des activités"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Add Timeline"
-msgstr "Ajouter un planning"
+msgstr "Ajouter une chronologie"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Select Case for Merge"
@@ -631,7 +631,7 @@ msgstr ""
 msgid ""
 "Use this screen to define or update the Case Roles, Activity Types, and "
 "Timelines for a case type."
-msgstr "Utilisez cet écran pour définir ou mettre à jour les rôles de dossier, les types d'activité et les délais pour un type de dossier."
+msgstr "Utilisez cet écran pour définir ou mettre à jour les rôles, les types d'activité et les chronologies pour un type de dossier."
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
