--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -9,11 +9,11 @@
 # JoeMurray <joe.murray@jmaconsulting.biz>, 2013
 # JoeMurray <joe.murray@jmaconsulting.biz>, 2013
 # lavamind <jerome@riseup.net>, 2011,2016
-# Mathieu Lutfy <mathieu@bidon.ca>, 2011-2012,2014-2016
+# Mathieu Lu <mathieu@bidon.ca>, 2011-2012,2014-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Rick Paré <rick.pare69@gmail.com>, 2016
+# Rick Paré, 2016
 # samuelsov <samuel@koumbit.org>, 2013
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012-2013
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-07 21:00+0000\n"
-"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
+"PO-Revision-Date: 2016-12-02 21:25+0000\n"
+"Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6587,7 +6587,7 @@ msgstr ""
 msgid ""
 "Do not run this job before this date / time. The run frequency selected "
 "above will apply thereafter."
-msgstr ""
+msgstr "Ne pas exécuter ce travail avant cette date / heure. La fréquence d'exécution sélectionnée ci-dessus s'appliquera par la suite."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "Leave blank to run as soon as possible."
