--- a/po/fr_CA/contribute.po
+++ b/po/fr_CA/contribute.po
@@ -5,11 +5,11 @@
 # Translators:
 # Julien Larocque-Dupont <transifex@s.quebec-hebergement.com>, 2013
 # Julien Larocque-Dupont <transifex@s.quebec-hebergement.com>, 2013
-# Mathieu Lutfy <mathieu@bidon.ca>, 2012,2014-2016
+# Mathieu Lu <mathieu@bidon.ca>, 2012,2014-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Rick Paré <rick.pare69@gmail.com>, 2016
+# Rick Paré, 2016
 # rmps <rmpsante@gmail.com>, 2014
 # rmps <rmpsante@gmail.com>, 2014
 # samuelsov <samuel@koumbit.org>, 2015
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 17:41+0000\n"
-"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
+"PO-Revision-Date: 2016-12-02 21:57+0000\n"
+"Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5311,7 +5311,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "Avg"
-msgstr ""
+msgstr "Moyen"
 
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid ""
