--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -6,11 +6,11 @@
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
 # Mathieu B <mathieu@brab.ca>, 2016
-# Mathieu Lutfy <mathieu@bidon.ca>, 2012,2015
+# Mathieu Lu <mathieu@bidon.ca>, 2012,2015
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Rick Paré <rick.pare69@gmail.com>, 2016
+# Rick Paré, 2016
 # samuelsov <samuel@koumbit.org>, 2015
 # samuelsov <samuel@koumbit.org>, 2011
 # samuelsov <samuel@koumbit.org>, 2011,2015
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-07 19:13+0000\n"
-"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
+"PO-Revision-Date: 2016-12-02 19:56+0000\n"
+"Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2206,12 +2206,12 @@ msgstr "Composants"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr ""
+msgstr "Extensions"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Mes rapports"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
