po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-24 15:07+0000\n"
+"PO-Revision-Date: 2016-12-02 10:12+0000\n"
 "Last-Translator: Thomas Nilefalk <thomas.nilefalk@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -18348,7 +18348,7 @@ msgstr "Du kan ha maximalt %1 bilag(a/or)."
 msgid ""
 "Each file must be less than %1M in size. You can also add a short "
 "description."
-msgstr ""
+msgstr "Filer måste vara mindre än %1M stor. Du kan också lägga till en kort beskrivning."
 
 #: templates/CRM/Form/attachmentjs.tpl
 msgid ""
