po: update po/fr_CA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -15,7 +15,7 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Rick Paré <rick.pare69@gmail.com>, 2016
+# Rick Paré, 2016
 # rmps <rmpsante@gmail.com>, 2014
 # rmps <rmpsante@gmail.com>, 2014
 # samuelsov <samuel@koumbit.org>, 2013-2016
@@ -28,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-14 17:08+0000\n"
-"Last-Translator: Mathieu Lu <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-02 21:14+0000\n"
+"Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25262,7 +25262,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Job.php
 msgid "Scheduled Run Date"
-msgstr ""
+msgstr "Date d'exécution programmée"
 
 #: CRM/Core/DAO/Log.php
 msgid "Log ID"
