--- a/po/fr_CA/report.po
+++ b/po/fr_CA/report.po
@@ -3,10 +3,11 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Mathieu Lutfy <mathieu@bidon.ca>, 2015-2016
+# Mathieu Lu <mathieu@bidon.ca>, 2015-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré, 2016
 # samuelsov <samuel@koumbit.org>, 2016
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012,2016
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-02 19:44+0000\n"
+"Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2294,7 +2295,7 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php
 msgid "Add to My Reports?"
-msgstr ""
+msgstr "Ajouter à Mes rapports?"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
@@ -2408,7 +2409,7 @@ msgstr "Lien vers"
 msgid ""
 "If set to Yes, this report will appear in the My Reports section of the "
 "reports listing page and will only be visible by you."
-msgstr ""
+msgstr "Si sélectionné, ce rapport apparaîtra dans la section \"Mes rapports\" de la page d'affichage des rapports et il ne sera visible que par vous."
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "rows"
@@ -2427,17 +2428,17 @@ msgstr ""
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid "Add to My Reports"
-msgstr ""
+msgstr "Ajouter à Mes rapports"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
 "Selecting Yes will set the report to be visible only to the user\n"
 "  that clicked this option and saved the report settings form. If this is\n"
 "  enabled, the permissions configuration for this report will be disabled."
-msgstr ""
+msgstr "Si sélectionné, le rapport sera visible uniquement par l'utilisateur qui a cliqué sur cette option et enregistré le modèle du rapport.\nSi cette option est activée, la configuration des autorisations pour ce rapport sera désactivée."
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid ""
 "You do not have any private reports. To add a report to this section, edit "
 "the Report Settings for a report and set 'Add to My Reports' to Yes."
-msgstr ""
+msgstr "Vous n'avez pas de rapport personnel. Pour ajouter un rapport à cette section, modifiez les paramètres d'un rapport et sélectionnez «Ajouter à Mes rapports»."
