--- a/po/fr_CA/common-components.po
+++ b/po/fr_CA/common-components.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-25 21:41+0000\n"
+"PO-Revision-Date: 2016-12-02 21:39+0000\n"
 "Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -337,7 +337,7 @@ msgstr "Impossible de supprimer"
 
 #: templates/CRM/Admin/Page/Options.hlp ang/crmCaseType/edit.html
 msgid "Activity Types"
-msgstr ""
+msgstr "Types d'activités"
 
 #: templates/CRM/Admin/Page/Options.tpl templates/CRM/Report/Page/Options.tpl
 msgid ""
@@ -2214,11 +2214,11 @@ msgstr ""
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Ascending"
-msgstr ""
+msgstr "Croissant"
 
 #: CRM/Campaign/Form/Task/Interview.php CRM/Report/Form.php
 msgid "Descending"
-msgstr ""
+msgstr "Décroissant"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: CRM/Contribute/Form/UpdateSubscription.php
@@ -2264,7 +2264,7 @@ msgstr ""
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Median"
-msgstr ""
+msgstr "Médian"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
