--- a/po/lt_LT/admin.po
+++ b/po/lt_LT/admin.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Edgaras Kaveckas <edgaras.kaveckas@ecolink.lt>, 2016
 # Edmundas <mksawas@gmail.com>, 2012
 # jonaskariniauskas <jonas.kariniauskas@gmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -10,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-04 09:22+0000\n"
+"Last-Translator: Edgaras Kaveckas <edgaras.kaveckas@ecolink.lt>\n"
 "Language-Team: Lithuanian (http://www.transifex.com/civicrm/civicrm/language/lt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,15 +46,15 @@ msgstr "Pasirinktas kontaktų tipas negali būti ištrintas. Įsitikinkite, kad 
 
 #: CRM/Admin/Form/ContactType.php
 msgid "The Contact Type '%1' has been saved."
-msgstr ""
+msgstr "Kontakto tipas '%1' buvo išsaugotas."
 
 #: CRM/Admin/Form/Extensions.php templates/CRM/Admin/Page/Extensions.tpl
 msgid "The system administrator has disabled this feature."
-msgstr ""
+msgstr "Sistemos administratorius šią funkciją išjungė."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Unsupported action"
-msgstr ""
+msgstr "Veiksmas nepalaikomas"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Install"
@@ -73,11 +74,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Uninstall"
-msgstr ""
+msgstr "Išdiegti"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Išdiegti \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
@@ -89,7 +90,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
-msgstr ""
+msgstr "Plėtinys Išdiegtas"
 
 #: CRM/Admin/Form/Extensions.php
 msgid ""
@@ -99,27 +100,27 @@ msgstr ""
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall Error"
-msgstr ""
+msgstr "Išinstaliavimo klaida"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Installed"
-msgstr ""
+msgstr "Plėtinys įdiegtas"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Enabled"
-msgstr ""
+msgstr "Plėtinys aktyvuotas"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Disabled"
-msgstr ""
+msgstr "Plėtinys išjungtas"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgraded"
-msgstr ""
+msgstr "Plėtinys atnaujintas"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgrade Failed"
-msgstr ""
+msgstr "Plėtinio Atnaujinimas Nepavyko"
 
 #: CRM/Admin/Form/Job.php
 msgid "Manage - Scheduled Jobs"
