po: update po/fr_CA/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-02 21:25+0000\n"
+"PO-Revision-Date: 2016-12-05 20:54+0000\n"
 "Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -3229,7 +3229,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Enable repetition."
-msgstr ""
+msgstr "Activer la répétition."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "You can manually send out the reminders to these recipients."
@@ -5524,13 +5524,13 @@ msgstr "Vous pouvez aussi ajouter ou modifier vos Rôles ACL ci dessous. Vous po
 msgid ""
 "Use Event Types to categorize your events. Event feeds can be filtered by "
 "Event Type and participant searches can use Event Type as a criteria."
-msgstr "Utilisez les types d'évènements pour catégoriser vos évènement. Les flux d'évènement peuvent être filtrés par types et les recheches sur les participants peuvent utiliser le type d'évènement comme critére"
+msgstr "Utilisez les types d'événements pour catégoriser vos événements. Les flux d'événements peuvent être filtrés par type d'événement et les recherches de participants peuvent utiliser le type d'événement comme critère."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
 "Define participant roles for events here (e.g. Attendee, Host, Speaker...). "
 "You can then assign roles and search for participants by role."
-msgstr "Défiissez le rôle des participants pour les évènement ici (ex accueil, Speaker, sécurité ...). Vous pouvez ensuite assigner des rôles et chercher vos participant en fonction de ces rôles."
+msgstr "Définissez ici les rôles des participants aux événements (par exemple, Participant, Hôte, Orateur ...). Vous pouvez ensuite assigner les rôles et chercher vos participants en fonction de ces rôles."
 
 #: templates/CRM/Admin/Page/Options.tpl
 msgid ""
