po: update po/fr_CA/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/event.po
+++ b/po/fr_CA/event.po
@@ -5,12 +5,12 @@
 # Translators:
 # Florent Michelot, 2016
 # Mathieu B <mathieu@brab.ca>, 2016
-# Mathieu Lutfy <mathieu@bidon.ca>, 2012,2014-2016
+# Mathieu Lu <mathieu@bidon.ca>, 2012,2014-2016
 # pascoalg <pascoal@ecologieurbaine.net>, 2012
 # pascoalg <pascoal@ecologieurbaine.net>, 2012
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Rick Paré <rick.pare69@gmail.com>, 2016
+# Rick Paré, 2016
 # samuelsov <samuel@koumbit.org>, 2011-2012
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012-2013
 # Stéphane Lussier <stephane@symbiotic.coop>, 2016
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-21 19:55+0000\n"
-"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
+"PO-Revision-Date: 2016-12-05 20:44+0000\n"
+"Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3667,7 +3667,7 @@ msgstr "Nombre maximum de participants en plus par régistration"
 
 #: CRM/Event/DAO/Event.php
 msgid "Allow Self-service Cancellation or Transfer"
-msgstr ""
+msgstr "Autoriser l'annulation ou le transfert en libre-service"
 
 #: CRM/Event/DAO/Event.php
 msgid "Self-service Cancellation or Transfer Time"
@@ -3683,7 +3683,7 @@ msgstr "Participants maximum en plus"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Allow self-service cancellation or transfer?"
-msgstr ""
+msgstr "Autoriser l'annulation ou le transfert en libre-service?"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Cancellation or transfer time limit (hours)"
@@ -3881,7 +3881,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Allow Self-service Cancellation or Transfer?"
-msgstr ""
+msgstr "Autoriser l'annulation ou le transfert en libre-service"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -3889,14 +3889,14 @@ msgid ""
 " their registration OR transfer it to another participant. If this feature "
 "is enabled, event confirmation emails will include a link to a Cancel or "
 "Transfer form."
-msgstr "Selectionnez cette case si vous souhaitez de permettre aux participants enregistrés soit d'annuler leur enregistrement OU de transférer vers un autre participant. Si cette fonction est activée, les emails de confirmation seront inclus sous un lien de formulaire d'annulation ou de transfert. "
+msgstr "Sélectionnez cette case si vous souhaitez permettre aux participants inscrits d'annuler leur inscription OU de la transférer à un autre participant. Si cette fonctionnalité est activée, les courriels de confirmation de l'événement incluront un lien vers le formulaire d'annulation ou de transfert."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
 "<strong>Automated refunds for cancellations are NOT currently "
 "supported.</strong> Participants who have paid for an event will be notified"
 " that cancellations are not refundable."
-msgstr ""
+msgstr "<strong>Les remboursements automatisés pour les annulations ne sont PAS actuellement pris en charge.</strong> Les participants qui ont payé pour un événement seront informés que les annulations ne sont pas remboursables."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Cancellation or Transfer Time Limit"
