po: update po/nb_NO/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nb_NO/admin.po
+++ b/po/nb_NO/admin.po
@@ -10,13 +10,13 @@
 # Stein-Aksel Basma <basma@accelero.no>, 2011, 2012
 # Stein-Aksel Basma <stabasm@hotmail.com>, 2011-2012,2014
 # Steinar Sødal <steinar@maf.no>, 2012
-# Steinar Sødal <steinar@maf.no>, 2013
+# Steinar Sødal <steinar@maf.no>, 2013,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-06 12:49+0000\n"
+"Last-Translator: Steinar Sødal <steinar@maf.no>\n"
 "Language-Team: Norwegian Bokmål (http://www.transifex.com/civicrm/civicrm/language/nb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -688,7 +688,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Select the interval for due date."
-msgstr ""
+msgstr "Velg intervallet for forfallsdato."
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Notes or Standard Terms"
